Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.101 devel

****  Support const object new() assignments.


* Verilator 4.100 2020-09-07

**    C++11 or newer compilers are now required.

**    SystemC 2.3.0 or newer (SYSTEMC_VERSION >= 20111121) is now required.

**    Support hierarchical Verilation (#2206). [Yutetsu TAKATSUKASA]

****  Support (with limitations) class extern, class extends, virtual class.

****  Support $urandom, $urandom_range without stability.

****  Fix false DECLFILENAME on black-boxed modules (#2430). [Philipp Wagner]

****  Fix naming of "id : begin" blocks.

****  Fix class constructor error on assignments to const.

****  Fix splitting eval functions with --output-split-cfuncs (#2368). [Geza Lore]

****  Fix queues as class members (#2525). [nanduraj1]

****  Add support for assume property. [Peter Monsson]

****  Add support for |=> inside properties (#1292). [Peter Monsson]


* Verilator 4.040 2020-08-15

**    Version 4.040 is planned to be the final version that will
      support pre-C++11 compilers. Please move to C++11 or newer compilers.

***   Fix arrayed interfaces, broke in 4.038 (#2468). [Josh Redford]

****  Support $stable, $rose and $fell.  (#2148) (#2501) [Peter Monsson]

****  Support simple function localparams (#2461). [James Hanlon]

****  Miscellaneous parsing error changes towards UVM support.

****  Fix arrayed interfaces (#2469).  [Josh Redford]

****  Fix protect lib VCS warning. (#2479) [Julien Margetts]

****  Fix combining different-width parameters (#2484). [abirkmanis]

****  Fix protect-lib without sequential logic (#2492). [Yutetsu TAKATSUKASA]

****  Fix V3Unknown from running with flat XML output (#2494). [James Hanlon]

****  Fix non-32 bit conversion to float (#2495). [dsvf]

****  Fix casting non-self-determined subexpressions (#2493). [phantom-killua]

****  Fix SystemC net names (#2500). [Edgar E. Iglesias]
