@@ -1,4 +1,5 @@
 // Test that environment substitutions work
+# This is also a comment (in several simulators)
 -f $VERILATOR_ROOT/test_regress/t/t_flag_f__2.vc
 // Env var with .v file, and parens
 // Double slash below is intentional, as allowed in other tools
