@@ -7,6 +7,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Support const object new() assignments.
 
+****  Support # as a comment in -f files (#2497). [phantom-killua]
+
 
 * Verilator 4.100 2020-09-07
 
